Handled Supplier get(0) Issue Resolved
Add Supplier lambda to generate default property
- Added getDefaultPropertyIfEmpty method in PropertyAnalyzer.
- Used Supplier lambda to generate a default ResidentialProperty.
- Refactored to use List.getFirst() with try-catch for empty list handling.
- Added necessary imports (Supplier, List, NoSuchElementException).
- Inlined Supplier lambda to remove redundant variable declaration.
- Updated Main.java to include GET_DEFAULT_PROPERTY action.