@@ -1,6 +1,8 @@
 package RealEstatePackage;
 
+import java.util.NoSuchElementException; // Import for NoSuchElementException
 import java.util.function.Consumer;
+import java.util.function.Supplier;
 
 public class PropertyAnalyzer {
     private final PropertyManager manager;
@@ -9,19 +11,23 @@ public class PropertyAnalyzer {
         this.manager = manager;
     }
 
-    public void logProperties()
-    {
-        Consumer<Property> propertyLogger = property -> System.out.println("LOG: [Address: " + property.getFullAddress() +
-                        ", Price: $" + property.getPrice() + ", Status: " + property.getStatus() + "]");
+    // Concept: Lambda (Consumer) - Use Consumer to log property details in a custom format
+    public void logProperties() {
+        Consumer<Property> propertyLogger = property ->
+                System.out.println("LOG: [Address: " + property.getFullAddress() +
+                        ", Price: $" + property.getPrice() +
+                        ", Status: " + property.getStatus() + "]");
 
         System.out.println("\nLogging all properties with Consumer:");
         manager.getProperties().forEach(propertyLogger);
     }
 
-    public Property getDefaultPropertyIfEmpty()
-    {
-        Supplier<Property> defaultPropertySupplier = () -> new ResidentialProperty("Default Address", 100000, 2);
-        List<Property> properties = manager.getProperties();
-        return properties.isEmpty() ? defaultPropertySupplier.get() : properties.get(0);
+    // Concept: Lambda (Supplier) - Generate a default property if none match criteria
+    public Property getDefaultPropertyIfEmpty() {
+        try {
+            return manager.getProperties().getFirst();
+        } catch (NoSuchElementException e) {
+            return new ResidentialProperty("Default Address", 100000, 2);
+        }
     }
 }
